--- a/TGRFramework.Prototype.XNAGame/TGRFramework.Prototype.XNAGame/TGRFramework.Prototype.XNAGame.csproj
+++ b/TGRFramework.Prototype.XNAGame/TGRFramework.Prototype.XNAGame/TGRFramework.Prototype.XNAGame.csproj
@@ -108,12 +108,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GameManager.cs" />
-    <Compile Include="GameSelection.cs" />
+    <Compile Include="Game\GameManager.cs" />
+    <Compile Include="Game\GameSelection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="SelectionScreen.cs" />
-    <Compile Include="XNAGame.cs" />
+    <Compile Include="Game\Program.cs" />
+    <Compile Include="Game\SelectionScreen.cs" />
+    <Compile Include="Game\XNAGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\Data\SlotGameDatabase.xml">
