--- a/TGRFramework.Prototype.Common/TGRFramework.Prototype.Common.csproj
+++ b/TGRFramework.Prototype.Common/TGRFramework.Prototype.Common.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{6F6A13A8-2694-45E5-8B21-7986B9FDED60}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TRGFramework.Prototype.Common</RootNamespace>
-    <AssemblyName>TRGFramework.Prototype.Common</AssemblyName>
+    <RootNamespace>TGRFramework.Prototype.Common</RootNamespace>
+    <AssemblyName>TGRFramework.Prototype.Common</AssemblyName>
     <TargetFrameworkVersion>v4.0.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -30,6 +30,38 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <CodeAnalysisLogFile>bin\Debug\TGRFramework.Prototype.Common.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
+    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
+    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSetDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
+    <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
+    <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
+    <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <CodeAnalysisLogFile>bin\Release\TGRFramework.Prototype.Common.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
+    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
+    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSetDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
+    <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
+    <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
+    <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
@@ -69,17 +101,37 @@
     <Compile Include="Framework\IDatabase.cs" />
     <Compile Include="Framework\IGame.cs" />
     <Compile Include="Framework\Screen.cs" />
+    <Compile Include="Framework\SplashScreen.cs" />
     <Compile Include="Framework\StoryBoard.cs" />
     <Compile Include="Framework\Subsystem.cs" />
+    <Compile Include="Messaging\ActionMessage.cs" />
     <Compile Include="Messaging\Message.cs" />
     <Compile Include="Messaging\IGameCompleteMessage.cs" />
+    <Compile Include="Physics\CharacterDamageModel.cs" />
+    <Compile Include="Physics\MeleeAttackModel.cs" />
+    <Compile Include="Physics\MeleeDownSwipeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\BackgroundSprite.cs" />
     <Compile Include="Sprites\ButtonSprite.cs" />
+    <Compile Include="Sprites\Characters\CoinSprite.cs" />
+    <Compile Include="Sprites\Characters\EnemyCharacterSprite.cs" />
+    <Compile Include="Sprites\Characters\GroundEnemyCharacterSprite.cs" />
+    <Compile Include="Sprites\Characters\HomingCharacterSprite.cs" />
     <Compile Include="Sprites\ISprite.cs" />
+    <Compile Include="Sprites\Characters\CharacterSprite.cs" />
+    <Compile Include="Sprites\MeleeWeaponSprite.cs" />
+    <Compile Include="Sprites\Characters\PlayableCharacterSprite.cs" />
     <Compile Include="Sprites\TextImgSprite.cs" />
     <Compile Include="Sprites\TextSprite.cs" />
+    <Compile Include="Sprites\PlatformerLevel.cs" />
+    <Compile Include="Physics\IPhysicsModel.cs" />
+    <Compile Include="Types\Line.cs" />
+    <Compile Include="Physics\MeleeSwipeModel.cs" />
+    <Compile Include="Types\Platform.cs" />
+    <Compile Include="Physics\SimpleFallModel.cs" />
+    <Compile Include="Physics\SimpleJumpModel.cs" />
+    <Compile Include="Physics\MeleeSwingModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TGRFramework.Prototype.Tools\TGRFramework.Prototype.Tools.csproj">
