--- a/TGRFramework.Prototype.LevelEditorXNA/TGRFramework.Prototype.LevelEditorXNA/TGRFramework.Prototype.LevelEditorXNA.csproj
+++ b/TGRFramework.Prototype.LevelEditorXNA/TGRFramework.Prototype.LevelEditorXNA/TGRFramework.Prototype.LevelEditorXNA.csproj
@@ -1,24 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{4DD20978-9194-4366-A3D1-04AE0FFE7CB1}</ProjectGuid>
+    <ProjectGuid>{23C4BDE2-2976-4D94-A9B5-D6B681AFB525}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TGRFramework.Prototype.XNAGame</RootNamespace>
-    <AssemblyName>TGRFramework.Prototype.XNAGame</AssemblyName>
-    <TargetFrameworkVersion>v4.0.1</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <RootNamespace>TGRFramework.Prototype.LevelEditorXNA</RootNamespace>
+    <AssemblyName>TGRFramework.Prototype.LevelEditorXNA</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
-    <XnaProfile>HiDef</XnaProfile>
-    <XnaCrossPlatformGroupID>2521bea1-8ec7-41ed-89b3-dd40e1f415ba</XnaCrossPlatformGroupID>
+    <XnaProfile>Reach</XnaProfile>
+    <XnaCrossPlatformGroupID>daee1b36-4e4c-4c2d-b62b-a725befd7c35</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
-    <Thumbnail>GameThumbnail.png</Thumbnail>
+    <Thumbnail>
+    </Thumbnail>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -60,9 +60,10 @@
     <PlatformTarget>x86</PlatformTarget>
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Pex.Framework, Version=0.94.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
     </Reference>
@@ -110,52 +111,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Game\GameManager.cs" />
-    <Compile Include="Game\GameSelection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Game\Program.cs" />
-    <Compile Include="Game\SelectionScreen.cs" />
-    <Compile Include="Game\XNAGame.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Game1.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\Data\SlotGameDatabase.xml">
-      <Link>SlotGameDatabase.xml</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\Data\TestLevel.txt">
-      <Link>TestLevel.txt</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
-    <Content Include="DiagnosticLevel.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SmallLevel.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\TGRFramework.Prototype.Common\TGRFramework.Prototype.Common.csproj">
-      <Project>{6F6A13A8-2694-45E5-8B21-7986B9FDED60}</Project>
-      <Name>TGRFramework.Prototype.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\TGRFramework.Prototype.HeroGame\TGRFramework.Prototype.HeroGame.csproj">
-      <Project>{D1AA9BF4-81DD-464C-A835-2823BA28BB7B}</Project>
-      <Name>TGRFramework.Prototype.HeroGame</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\TGRFramework.Prototype.SlotGame\TGRFramework.Prototype.SlotGame.csproj">
-      <Project>{86C07D85-9412-4F0A-88A5-F03243584BD3}</Project>
-      <Name>TGRFramework.Prototype.SlotGame</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\TGRFramework.Prototype.Tools\TGRFramework.Prototype.Tools.csproj">
-      <Project>{90889655-C742-4077-BF08-D38CEDE50B87}</Project>
-      <Name>TGRFramework.Prototype.Tools</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TGRFramework.Prototype.XNAGameContent\TGRFramework.Prototype.XNAGameContent.contentproj">
-      <Name>TGRFramework.Prototype.XNAGameContent %28Content%29</Name>
+    <ProjectReference Include="..\TGRFramework.Prototype.LevelEditorXNAContent\TGRFramework.Prototype.LevelEditorXNAContent.contentproj">
+      <Name>TGRFramework.Prototype.LevelEditorXNAContent %28Content%29</Name>
       <XnaReferenceType>Content</XnaReferenceType>
-      <Project>{548C2507-6A08-43EC-8E67-652109CE2579}</Project>
+      <Project>{80C04209-9FE8-4107-BA1C-E9389A07D95C}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -184,17 +152,6 @@
       <ProductName>Microsoft XNA Framework Redistributable 4.0</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\..\Data\log4net.config">
-      <Link>log4net.config</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="..\..\TGRFramework.Prototype.LevelEditor\bin\Debug\testLevel">
-      <Link>testLevel</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
